# Corewar-21

./: CMakeLists.txt  Makefile  add.cor  add.s  alives_checker.c  amedvedi.cor  amedvedi.s  asm  asm.c  asm.h  author  authorfile  c2  checks.c  cor1  corewar  corewar.h  diff_log  ex_2.cor  jjjj.cor  jjjj.s  jumper.cor  jumper.s  main.c  memory_deleter.c  memory_map  mortel_log.txt  move_programming_counter.c  my  norminette_log  op.c  op.h  operation_executing.c  ops-gtristan.c  ops-gtristan_1.c  processes_creator.c  processes_deleter.c  test  test.c  test.cor  (+15 more)
champs/: Gagnant.cor  Gagnant.s  ex.cor  ex.s  jjjj.cor  jjjj.s  jumper.cor  jumper.s  parasite.s
couida_tests/: 3.s  asm  t2  test_script
ft_printf_1/: Makefile  a.out
includes/: asm.h  corewar.h  header_pf.h  libft.h  op.h
includes_asm/: asm.h  op.h  structs.h
includes_vm/: corewar.h  op.h
libft/: Makefile  ft_atoi.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memdel.c  ft_putendl.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlen.c  ft_strmap.c  ft_strnequ.c  ft_strrchr.c  ft_strsplit.c  ft_strsub.c  ft_word_counter.c
other/: batman.cor  test.cor  test.s
src/: alives_checker.c  asm.c  champ_exec_code.c  check_players.c  check_players_position.c  checks.c  free_data.c  gnl.c  main.c  memory_allocator_for_cmd_line_arguments.c  memory_deleter.c  move_programming_counter.c  op.c  op1.c  op10.c  op11_op12_op15.c  op13.c  op14.c  op16.c  op2_op5.c  op4_op5_helper.c  op6_op7_op8_op9.c  operation_completer.c  parse_arguments.c  parse_v_n_d_dump.c  player_list_deleter.c  print_logs.c  (+17 more)
(+171 files in other folders)
