cmake_minimum_required(VERSION 3.15)
project(corewar C)
include_directories(./libft)
include_directories(./libft/ft_printf/includes)
include_directories(./includes)
set(CMAKE_C_STANDARD 99)
set(SOURCE_FILES src/to_bytecode.c src/asm.c src/labels_atoi.c src/checks.c src/op.c src/champ_exec_code.c src/free_data.c src/gnl.c src/split_corewar.c src/bin_arguments.c src/skips.c src/read_name_comment.c src/labels_instructions.c src/instruction_size.c src/check_params.c src/create_instruction.c)
set(INCLUDE_FILES includes/op.h includes/asm.h includes/structs.h)
add_executable(corewar ${SOURCE_FILES} ${INCLUDE_FILES})
target_link_libraries(corewar /Users/gtristan/CLionProjects/corewar/libft/libft.a)
target_link_libraries(corewar /Users/gtristan/CLionProjects/corewar/libft/ft_printf/libftprintf.a)